# teamwork

./: .gitignore  README.md  techspec.docx
game/: game.sln
game/game/: CMakeCache.txt  CMakeLists.txt  client.cpp  game.hpp  game.vcxproj  network.hpp  server.cpp
game/game/x64/Debug/: vc143.idb
game/game/x64/Debug/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  game.lastbuildstate
